[EDP-DDM-22344] added copyright and ddm-starter-logger
Change-Id: I5aebe96e1add0bf4ebdd370bf5fee337c41a670c